--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^1.2.1",
     "fast-glob": "^3.2.12",
     "flexsearch": "^0.7.31",
+    "geist": "^1.1.0",
     "js-yaml": "^4.1.0",
     "next": "13.4.16",
     "next-themes": "^0.2.1",
